// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GIVEN httpResponse AND the success method WHEN the method is executed AND all arguments are passed through SHOULD return the correct payload 1`] = `
Object {
  "errors": Object {
    "detail": "An unknown error occured",
    "status": Object {
      "code": 403,
      "message": "forbidden",
    },
  },
  "statusCode": Object {
    "code": 403,
    "message": "forbidden",
  },
}
`;

exports[`GIVEN httpResponse AND the success method WHEN the method is executed AND no arguments are passed through SHOULD return the correct payload 1`] = `
Object {
  "errors": Object {
    "detail": "An unknown error occured",
    "status": 500,
  },
  "statusCode": 500,
}
`;

exports[`GIVEN httpResponse AND the success method WHEN the method is executed AND no message is passed through SHOULD return the correct payload 1`] = `
Object {
  "errors": Object {
    "detail": "An unknown error occured",
    "status": Object {
      "code": 403,
    },
  },
  "statusCode": Object {
    "code": 403,
  },
}
`;

exports[`GIVEN httpResponse AND the success method WHEN the method is executed SHOULD return the correct payload 1`] = `
Object {
  "data": "{\\"message\\":\\"success\\"}",
  "statusCode": 200,
}
`;
